--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 
 <script type="text/javascript" src="./node_modules/angular/angular.js"></script>
 <script type="text/javascript" src="./node_modules/angular-route/angular-route.js"></script>
+
 <script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="./controllers/controllers.js"></script>
+<script type="text/javascript" src="./directives/directive.js"></script>
+
+<script type="text/javascript" src="./routes/routes.js"></script>
+<script type="text/javascript" src="./services/city-service.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
 
 </html>
